linode_test/ittalk_front.yml
#kind: Deployment
#apiVersion: apps/v1
#metadata:
#  name: ittalk-frontend
#  namespace: default
#spec:
#  replicas: 10
#  selector:
#    matchLabels:
#      app: ittalk-frontend-label
#      tier: app
#  template:
#    metadata:
#      creationTimestamp: null
#      labels:
#        app: ittalk-frontend-label
#        tier: app
#    spec:
#      containers:
#        - name: ittalk-frontend
#          image: yjcho96/ittalk-frontend
#          imagePullPolicy: Always
#          ports:
#            - containerPort: 443

---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: ittalk-frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: ittalk-frontend-label
      tier: app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ittalk-frontend-label
        tier: app
    spec:
      containers:
        - name: ittalk-frontend
          image: yjcho96/ittalk-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      nodeSelector:
        lke.linode.com/pool-id: '129527'


---

apiVersion: v1
kind: Service
metadata:
  name: ittalk-frontend
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-preserve: "true"
spec:
  type: ClusterIP
  selector:
    app: ittalk-frontend-label
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
