linode_test/ittalk_node.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ittalk-nodejs
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ittalk-nodejs-label
      tier: app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ittalk-nodejs-label
        tier: app
    spec:
      containers:
        - name: ittalk
          image: ittalk/node_ittalk:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      nodeSelector:
        ittok: socket

---

apiVersion: v1
kind: Service
metadata:
  name: ittalk-nodejs
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-preserve: "true"
spec:
  type: LoadBalancer
  selector:
    app: ittalk-nodejs-label
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
