linode_test/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cavyos-deployment
  name: cavyos-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cavyos-label
      tier: app
  minReadySeconds: 5
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxSurge: 3
#      maxUnavailable: 3
  template:
    metadata:
      labels:
        # selector 동일한 값으로 설정해야 함
        app: cavyos-label
        tier: app
    spec:
      containers:
        - name: cavyos
          image: tnswh2023/kube_test:latest
          imagePullPolicy: Always
#          command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
          ports:
            - containerPort: 8887
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
#          livenessProbe:
#            httpGet:
#              path: /ping
#              port: 8887

---
apiVersion: v1
kind: Service
metadata:
  name: cavyos-service
spec:
  type: LoadBalancer
  # type: externalName
  # externalName: cavyos-service
  # type: ClusterIp
  # cluseterIP: None # headless
  selector:
    app: cavyos-label
  ports:
    - port: 8887
      protocol: TCP

### headless service
# statefulset 에서 사용
